# onpremagent

./: .gitignore  Dockerfile  README.md  config.py  mikrotik.sh  mikrotik_controller.py  pyproject.toml  requirements.txt  ssh_controller.py
command_workers/: __init__.py  arista.py  bases.py  cisco.py  huawei.py  juniper.py  mikrotik.py
common/: api_secunity.py  arg_parse.py  configs.py  consts.py  enums.py  files_handler.py  flows.py  logs.py  schedulers.py  sshutils.py  utils.py
docker/: Dockerfile  install-inside-user.sh  install-inside.sh  upgrade-docker.sh
workers/: bases.py  device_controller.py  flows_applier.py  flows_sync.py  stats_fetcher.py
